# lib/db/src/schema/index.ts
@@ -19,3 +19,5 @@
 
 export * from "./loginConfig";
 export * from "./altarReports";
+export * from "./workers";
+export * from "./checkIns";
